# codeanim

./: .gitignore  CHANGELOG.md  LICENSE  README  README.md  codeanim.py  e2e-test.sh  intro-to-python.md  pyproject.toml  renovate.json  requirements.txt  vscanim.py
.github/: CODEOWNERS
.github/workflows/: bump.yml  ci.yml  isort.yml  pypi.yml  pytest.yml  release.yml  ruff.yml
src/codeanim/: __init__.py  chrome.py  core.py  delayer.py  interpolators.py  keyboard.py  markdown.py  monitor.py  mouse.py  parser.py  recorder.py  shell.py  vscode.py
tests/: chrome.py  e2e.md  e2e.py  parse.md  parse.py  test_core.py  test_delayer.py  test_integration.py  test_interpolators.py  test_markdown.py  test_parser.py  vscode.py
