[tool.poetry]
name = "codeanim"
version = "0.0.27"
description = "A tool that automates presentation of software demos."
authors = ["Shad Sharma <shadanan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.6"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
codeanim = "codeanim:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
