[project]
name = "codeanim"
version = "0.3.2"
description = "A tool that automates presentation of software demos."
readme = "README.md"
authors = [{ name = "Shad Sharma", email = "shadanan@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["pynput>=1.8.1", "pyperclip>=1.11.0"]

[project.scripts]
codeanim = "codeanim:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration tests requiring actual applications (deselect with '-m \"not integration\"')",
]
